Remove top-margin from the first child to correct spacing

--- a/src/stylesheets/components/_icon-list.scss
+++ b/src/stylesheets/components/_icon-list.scss
@@ -52,6 +52,9 @@ $icon-list-sizes: (3, 4, 5, 6, 7, 8, 9);
 
   .usa-icon-list__content {
     padding-left: 0.5em;
+    > *:first-child {
+      margin-top: 0;
+    }
   }
 
   .usa-prose {
